k8s/movie-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: movie-db
  name: movie-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: movie-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s/
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: movie-db
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: movie_db_dev
        - name: POSTGRES_PASSWORD
          value: movie_db_password
        - name: POSTGRES_USER
          value: movie_db_username
        image: postgres:12.1-alpine
        imagePullPolicy: ""
        name: movie-db
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data/
          name: postgres-data-movie
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: postgres-data-movie
        persistentVolumeClaim:
          claimName: postgres-data-movie
status: {}
