k8s/movie-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: movie-service
  name: movie-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: movie-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s/
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: movie-service
    spec:
      containers:
      - args:
        - uvicorn
        - app.main:app
        - --reload
        - --host
        - 0.0.0.0
        - --port
        - "8000"
        image: movie-service
        imagePullPolicy: ""
        name: movie-service
        ports:
        - containerPort: 8000
        resources: {}
        volumeMounts:
        - mountPath: /app/
          name: movie-service-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: movie-service-claim0
        persistentVolumeClaim:
          claimName: movie-service-claim0
status: {}
