k8s/cast-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: cast-service
  name: cast-service
spec:
  ports:
  - name: "8002"
    port: 8002
    targetPort: 8000
  selector:
    io.kompose.service: cast-service
status:
  loadBalancer: {}
