k8s/movie-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: movie-service
  name: movie-service
spec:
  ports:
  - name: "8001"
    port: 8001
    targetPort: 8000
  selector:
    io.kompose.service: movie-service
status:
  loadBalancer: {}
